--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -16,11 +16,11 @@ body {
 }
 
 main {
-  background: #f8f8f8;
+  /*background: #f8f8f8;*/
   flex: 1;
   display: flex;
   flex-direction: column;
-  max-width: 640px;
+  max-width: 1100px;
   margin: 0 auto;
 }
 
@@ -47,8 +47,7 @@ h1 {
 
 button {
   margin: 0.5rem 0;
-  padding: 0.5rem 0.75rem;
-  box-shadow: 4px 4px 15px 0 rgb(0 0 0 / 10%);
+  padding: 0.6rem 1rem 0.5rem 1rem;
   border: 0px;
   border-radius: 4px;
   color: white;
