--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -24,6 +24,8 @@ main {
   margin: 0 auto;
 }
 
+
+
 a {
   color: black;
   text-decoration-color: grey;
@@ -44,6 +46,8 @@ img {
 
 h1 {
   font-weight: normal;
+  margin: 0 0 0.25rem 0;
+  font-size: 1.5rem;
 }
 
 button {
