--- a/client/components/Layout.module.css
+++ b/client/components/Layout.module.css
@@ -7,6 +7,7 @@
   box-shadow: rgb(0 0 0 / 10%) 0px 25px 20px -20px;
   padding: 1rem;
   margin-bottom: 1.5rem;
+  background: white;
 }
 
 .header a {
@@ -26,4 +27,6 @@
   font-size: smaller;
 }
 
-
+.landingImageWrap {
+  z-index: -1;
+}
