--- a/client/components/Layout.module.css
+++ b/client/components/Layout.module.css
@@ -3,14 +3,15 @@
 }
 
 .header {
-  text-align: center;
   box-shadow: rgb(0 0 0 / 10%) 0px 25px 20px -20px;
-  padding: 0.5rem;
-  margin-bottom: 1.5rem;
+  padding: 0.5rem 1rem;
+  margin: 0 auto 1.5rem auto;
   background: white;
   font-size: 1.5rem;
   font-weight: bolder;
   letter-spacing: -0.05rem;
+  max-width: 1100px;
+  color: slategray;
 }
 
 .header a {
