--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -53,7 +53,7 @@ button {
   border: 0px;
   border-radius: 8px;
   color: white;
-  background-color: darkblue;
+  background-color: darkgreen;
   font-size: large;
   text-align: center;
   font-weight: bold;
