chainId checks etc

--- a/client/components/Layout.module.css
+++ b/client/components/Layout.module.css
@@ -25,7 +25,7 @@
 
 .alertIsTestnet {
   margin-top: 1rem;
-  color:red;
+  color:orange;
 }
 
 .pageContainer {
@@ -35,8 +35,9 @@
 }
 
 .footer {
-  text-align: center;
-  padding: 2rem 1rem;
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 1rem;
   font-size: smaller;
 }
 
