--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -21,6 +21,7 @@ main {
   flex-direction: column;
   max-width: 1100px;
   margin: 0 auto;
+  box-shadow: rgb(0 0 0 / 10%) 0px 25px 20px -20px;
 }
 
 a {
