--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -49,6 +49,10 @@ h1 {
   font-size: 1.5rem;
 }
 
+li {
+  padding: 0 0 1rem 0;
+}
+
 button {
   margin: 0.5rem 0;
   padding: 0.6rem 1rem 0.5rem 1rem;
