--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -32,6 +32,7 @@ a {
   text-underline-offset: 1.5px;
   text-decoration-skip-ink: auto;
   text-decoration-style: dotted;
+  cursor: pointer;
 }
 
 a:hover {
