--- a/client/components/Nft.module.css
+++ b/client/components/Nft.module.css
@@ -105,7 +105,7 @@
     color: darkgrey
 }
 
-.minter_updated {
+.nftStatus {
     background: white;
     overflow: hidden;
     max-height: 20rem;
