--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -55,7 +55,7 @@ li {
 
 button {
   display: block;
-  margin: 0.5rem 0;
+  margin: 1rem 0;
   padding: 0.6rem 1rem 0.5rem 1rem;
   border: 0px;
   border-radius: 4px;
@@ -70,6 +70,10 @@ button {
 button:disabled {
   background-color: grey;
   cursor:inherit;
+}
+
+form {
+	margin: 0 0 0.5rem 0;
 }
 
 input {
