--- a/client/components/Nft.module.css
+++ b/client/components/Nft.module.css
@@ -32,7 +32,7 @@
 
 .nftDetails {
     font-size: smaller;
-    padding: 1rem;
+    padding: 0 1rem 1rem 1rem;
 }
 
 .nftDetailsHeader {
@@ -115,11 +115,9 @@
 }
 
 .notification {
-    font-size: smaller;
     color: orange;
-    padding: 0.5rem 1rem 0.2rem 1rem;
+    font-size: smaller;
     margin: 1rem 0;
-    background: lightgoldenrodyellow;
     border-radius: 4px;
 }
 
@@ -138,7 +136,8 @@
     animation-iteration-count: infinite;
     animation-name: placeHolderShimmer;
     animation-timing-function: linear;
-    background: #f6f7f8;
+    color: orange;
+    padding: 0.5rem 1rem 0.2rem 1rem;
     background: linear-gradient(to right, lightgoldenrodyellow 8%, white 18%, lightgoldenrodyellow 33%);
     background-size: 800px 104px;
     position: relative;
@@ -195,4 +194,10 @@
 .bigInput {
     display: block;
     width: 100%;
+}
+
+button.secondary {
+	background: white;
+	color: black;
+	border: 1px solid black;
 }
